[package]
name = "ekvsb"
version = "0.0.13"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Benchmark Tool for Embedded Key-Value Stores available in Rust"
homepage = "https://github.com/sile/ekvsb"
repository = "https://github.com/sile/ekvsb"
readme = "README.md"
keywords = ["benchmark", "embedded-database"]
license = "MIT"
edition = "2018"

[dependencies]
byte-unit = "3"
cannyls = "0.9"
clap = "2"
futures = "0.1"
gnuplot = "0.0"
indicatif = "0.13"
percent-encoding = "2"
rand = "0.7"
rocksdb = "0.19"
serde = "1"
serde_derive = "1"
serde_json = "1"
siphasher = "0.3"
sled = "*"
structopt = "0.2"
trackable = { version = "0.2", features = ["serialize"] }
